kubernetes/backend-deploy.yml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: backend-deployment

  labels:

    app: backend-deployment

spec:

  replicas: 1

  selector:

    matchLabels:

      app: backend-deployment

  template:

    metadata:

      labels:

        app: backend-deployment

    spec:

      containers:
      - name: mytube-backend-app
        image: keoffor/mytube:v1
        ports:
        - name: backend-port
          containerPort: 8080

      nodeSelector:
        zone: us-east-1a
