kubernetes/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend-deployment
  ports:
  - name: http
    port: 80
    targetPort: backend-port
    protocol: TCP
  type: NodePort
